.deployment/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asaiasa-platform-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  rules:
  - host: asaiasa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-asaiasa-service
            port:
              number: 3000
  tls:
  - hosts:
    - asaiasa.com
    secretName: asaiasa-com-tls
